--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,132 @@
-# requirements.txt
+aiofiles==24.1.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+audiocraft==1.3.0
+audioread==3.0.1
+av==11.0.0
+blis==1.2.1
+catalogue==2.0.10
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpathlib==0.21.0
+cloudpickle==3.1.1
+colorlog==6.9.0
+confection==0.1.5
+cymem==2.0.11
+decorator==5.2.1
+demucs==4.0.1
+distro==1.9.0
+docopt==0.6.2
+dora_search==0.1.12
+einops==0.8.1
+encodec==0.1.1
+fastapi==0.115.12
+ffmpy==0.5.0
+filelock==3.18.0
+flashy==0.0.2
+fsspec==2025.3.2
+gradio==5.25.2
+gradio_client==1.8.0
+groovy==0.1.2
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+huggingface-hub==0.30.2
+hydra-colorlog==1.2.0
+hydra-core==1.3.2
+idna==3.10
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+julius==0.2.7
+lameenc==1.8.1
+langcodes==3.5.0
+language_data==1.3.0
+lazy_loader==0.4
+librosa==0.10.2.post1
+lightning-utilities==0.14.3
+llvmlite==0.41.1
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mpmath==1.3.0
+msclap==1.3.3
+msgpack==1.1.0
+murmurhash==1.0.12
+networkx==3.4.2
+num2words==0.5.14
+numba==0.58.1
+numpy==1.26.4
+omegaconf==2.3.0
+openai==1.75.0
+openunmix==1.3.0
+orjson==3.10.16
+packaging==25.0
+pandas==2.2.3
+pillow==11.2.1
+platformdirs==4.3.7
+pooch==1.8.2
+preshed==3.0.9
+protobuf==6.30.2
+pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
+pydub==0.25.1
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+retrying==1.3.4
+rich==14.0.0
+ruff==0.11.6
+safehttpx==0.1.6
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+semantic-version==2.10.0
+sentencepiece==0.2.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+soundfile==0.13.1
+soxr==0.5.0.post1
+spacy==3.8.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+starlette==0.46.2
+submitit==1.5.2
+sympy==1.13.1
+thinc==8.3.4
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+tomlkit==0.13.2
+torch==2.1.0
+torchaudio==2.1.0
+torchdata==0.7.0
+torchlibrosa==0.1.0
+torchmetrics==1.7.1
+torchtext==0.16.0
+torchvision==0.16.0
+tqdm==4.67.1
+transformers==4.51.3
+treetable==0.2.5
+typer==0.15.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.2
+wasabi==1.1.3
+weasel==0.4.1
+websockets==15.0.1
+wrapt==1.17.2
+xformers==0.0.22.post7
